fix non-sticky menu button on mobile, set --vh as calc of window height

--- a/src/App.css
+++ b/src/App.css
@@ -5,7 +5,7 @@
 
     box-sizing: border-box;
     position: relative;
-    height: 100%;
+    min-height: calc(var(--vh, 1vh) * 100);
     width: 100%;
     margin: 0;
     padding: 0;
@@ -26,7 +26,7 @@
 }
 
 .page {
-    height: 100vh;
+    min-height: calc(var(--vh, 1vh) * 100);
     width: 100%;
     margin: 0;
     padding: 2rem;
