--- a/src/components/navigation/navigation.styles.scss
+++ b/src/components/navigation/navigation.styles.scss
@@ -1,5 +1,12 @@
 
-/* Sidebar */
+.navigation-container {
+  position: relative
+}
+
+.navigation-button {
+  position: fixed;
+}
+
 .sidebar {
   position: fixed;
   top: 0;
@@ -33,7 +40,7 @@
   }
 
   .sidebar {
-    height: 100vh !important;
+    height: calc(var(--vh, 1vh) * 100) !important;
   }
 }
 
@@ -41,13 +48,13 @@
 @media (max-width: 991.98px) {
   .sidebar {
 
-      position: absolute;
+      // position: absolute;
       padding-top: 0;
       top: 0;
       bottom: 0;
       left: 0px;
       width: 200px;
-      height: 100%;
+      height: calc(var(--vh, 1vh) * 100);
       z-index: 598;
       transition: transform 0.3s ease-in-out;
       transform: translateX(0);
